
=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.8.9 ()

=head2 Improvements

=over

=item *

Added missing foreign key constraints and indexes on the C<category_keyword>,
C<story_keyword>, C<media_keyword>, C<element_member>, and
C<media_contributor> tables. This should make keyword lookups, at least, much
faster. [David]

=back

=head1 VERSION 1.8.8 (2005-10-27)

=head2 Bug Fixes

=over 4

=item *

Fixed thumbnail URIs broken in 1.8.7. [David]

=item *

Fixed the "media expire" event. [David]

=item *

Media documents with more than one file version are no longer expired as soon
as they're published. Reported by Wayne Slavin. [David]

=item *

Added upgrade script to adjust the file names of media files in the resource
table in the database to be in sync with the new names on the file system
introduced in 1.8.7. [David]

=back

=head1 VERSION 1.8.7 (2005-10-24)

=head2 Improvements

=over 4

=item *

The installer now prefers typical installation paths over those in the
C<$PATH> environment variable when searching for Apache and PostgreSQL
installations. This is to favor servers installed manually over those included
with the operating system. [David]

=item *

Added a partial index on the C<comp_time> column of the job table so as to
speed up lookups of jobs yet to be completed. This was originally in a 1.6.7
upgrade script, but never made it into the SQL for new installations.
Suggested by Mark Jaroski. [David]

=item *

The Bulk Publish feature in the UI now only publishes the previously published
versions of unexpired stories and media, rather than the latest version of
expired and unexpired stories and media, thus avoiding errors when documents
are checked out. [David]

=item *

If a story passed to the C<burn_another()> or C<preview_another()> burner
methods is the same as the story currently being burned, it will no longer be